--- a/package.json
+++ b/package.json
@@ -8,22 +8,10 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@octokit/auth-basic": "^1.4.8",
-    "@octokit/rest": "^18.5.3",
-    "arg": "^5.0.0",
     "chalk": "^4.1.1",
     "clear": "^0.1.0",
-    "clui": "^0.3.6",
-    "configstore": "^6.0.0",
-    "esm": "^3.2.25",
     "figlet": "^1.5.0",
-    "inquirer": "^8.0.0",
-    "lodash": "^4.17.21",
-    "minimist": "^1.2.5",
-    "readline-sync": "^1.4.10",
-    "repl": "^0.1.3",
-    "simple-git": "^2.38.0",
-    "touch": "^3.1.0"
+    "webforth": "^0.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
